# learning-cmake-monorepo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  docker-compose.yaml  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/project-a/: action.yml
.github/project-b/: action.yml
.github/workflows/: alpha.yml  artifacts.yml  cache-in-job.yml  cached.yml  full.yml  incremental.yml  libshared.yml  monorepo.yml  project-a.yml  project-b.yml
alpha/: CMakeLists.txt
alpha/alpha/: main.cpp
beta/: CMakeLists.txt
beta/beta/: main.cpp
cmake/: CMakePresets.base.json  Findmonorepo.cmake  add_project_library_alias.cmake  config.cmake.in
libshared/: CMakeLists.txt
libshared/libshared/: libshared.cpp  libshared.h
project-a/: CMakeLists.txt  CMakePresets.json
project-a/alpha/: CMakeLists.txt
project-a/alpha/project-a/alpha/: main.cpp
project-a/app-alpha/: CMakeLists.txt
project-a/app-alpha/project-a/alpha/: main.cpp
project-a/beta/: CMakeLists.txt
project-a/beta/beta/: main.cpp
project-a/cmake/: config.cmake.in
project-a/lib-foo/: CMakeLists.txt
project-a/lib-foo/project-a/foo/: foo.cpp  foo.hpp  other.hpp
project-a/lib-shared/: CMakeLists.txt
project-a/lib-shared/project-a/shared/: other.hpp  shared.cpp
project-a/lib-special/: CMakeLists.txt
project-a/lib-special/project-a/special/: special.cpp
project-a/lib-static/: CMakeLists.txt
project-a/lib-static/project-a/special/: special.hpp
project-a/shared/: CMakeLists.txt
project-a/shared/project-a/shared/: shared.cpp  shared.hpp
project-a/special/: CMakeLists.txt
project-a/special/project-a/special/: special.hpp
project-b/: CMakeLists.txt  CMakePresets.json
project-b/app-beta/: CMakeLists.txt
project-b/app-beta/project-b/beta/: main.cpp
project-b/app-gamma/: CMakeLists.txt
project-b/app-gamma/project-b/gamma/: main.cpp
project-b/gamma/: CMakeLists.txt
project-b/gamma/project-b/gamma/: main.cpp
project-c/: CMakeLists.txt  CMakePresets.json
project-c/app-gamma/: CMakeLists.txt
project-c/app-gamma/project-c/gamma/: main.cpp
shared/: CMakeLists.txt
shared/shared/: shared.cpp  shared.h
